--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,23 +4,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Use Deno 
-      uses: denolib/setup-deno@v2
+    - uses: denolib/setup-deno@v2
+
     - uses: actions/checkout@v2
+
     - name: Build with Aleph
       run: deno run -A https://deno.land/x/aleph/install.ts && ./build.sh
-  deploy:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v1
 
     - name: deploy docs
       uses: appleboy/gh-pages-action
       with:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        remote_url: https://github.com/appleboy/gh-pages-action.git
         pages_directory: 
         target_directory: docs
