--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,26 @@
 name: build
-on: 
+on:
   push:
-    branches:    
-      - 'main'
+    branches:
+      - "main"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: denolib/setup-deno@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Build with Aleph
-      run: deno run -A https://deno.land/x/aleph/install.ts && ./build.sh
+      - name: Build
+        run: npm i && ./build.sh
 
-    - name: deploy docs
-      uses: appleboy/gh-pages-action@v0.0.2
-      with:
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        remote_url: https://github.com/Laegel/blog.git
-        target_branch: release
-        target_directory: docs
+      - name: deploy docs
+        uses: appleboy/gh-pages-action@v0.0.2
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          remote_url: https://github.com/Laegel/blog.git
+          target_branch: release
+          target_directory: docs
