--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,24 @@
 services:
-  aleph:
+  web:
+    # build:
+    #   context: ./
+    #   target: runner
+    # volumes:
+    #   - .:/app
     build: .
-    ports:
-      - "8080:8080"
+    container_name: blog
     volumes:
-      - ./app:/app
-    working_dir: /app
+      - .:/code
+      - app:/home/app
+      - '~/.ssh:/home/app/.ssh'
+      - '~/.gitconfig:/home/app/.gitconfig'
+      - '~/.gitignore:/home/app/.gitignore'
+    working_dir: /code
+    command: npm run dev
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: development
+
+volumes:
+  app:
